# Labeling_app

./: .dockerignore  .flake8  .gitignore  ARCHITECTURE_FLOW.md  DB_STRUCTURE.md  DEPLOYMENT_DOCKER_SETUP.md  DESIGN_PATTERNS.md  FRONTEND_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  JUMBITA_PRODUCTION_SETUP.md  JUMBITA_SETUP.md  JUMBITA_VALIDATOR_SMOKETEST.md  KEY_MANAGEMENT.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  check_db.py  docker-compose.prod.yml  docker-compose.prod.yml.bak_20260422_131131  docker-compose.prod.yml.bak_20260422_131515  labeling-app.service  labeling_app.db  pyproject.toml  rotate_keys.sh
archived-docs/: DEPLOYMENT.md  DEPLOYMENT_PRODUCTION.md  EXECUTIVE_SUMMARY.md  FRONTEND_README.md  NOTIFICATIONS_README.md  PHASE2_COMPLETION.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION_GUIDE.md  QUICK_START.md  ROBUSTNESS_ARCHITECTURE.md  ROBUSTNESS_CHECKLIST.md  TRANSCRIPTION_README.md  VISUAL_PATTERNS_GUIDE.md  deploy.sh  start_instances.sh  test_phase2.py  test_phase2_lb.py
backup_job/: db_backup.sh
docker/nginx/: nginx-prod.conf  nginx-prod.conf.bak_20260422_131131  (+1 more)
docker/web_app/: Dockerfile  (+2 more)
envs/: postgres.env.example  production.env.example  web_app.env.example
scripts/: bootstrap_fresh_postgres.sh  deploy_and_smoketest_jumbita.sh  deploy_production.sh  import_runtime_sources.sh  init-db.sql  reimport_project_safe.sh  run_production_stack.sh  runtime_config.sh  setup_backups.sh
src/: app.py  app_backup.py  check_data.py  config.py  gunicorn_config.py  init_and_import.py  labeling_app.db  test_app_startup.py  verify_import.py  wsgi.py
(+395 files in other folders)
