[project]
name = "labeling-app"
version = "0.1.0"
description = "Sistema web para validacion colaborativa de transcripciones de audio"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.3",
    "Werkzeug==2.3.7",
    "SQLAlchemy==2.0.23",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Flask-Session==0.8.0",
    "PyJWT==2.8.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "librosa==0.10.0",
    "soundfile==0.12.1",
    "numpy==1.24.3",
    "openpyxl==3.1.5",
    "psutil==5.9.6",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "marshmallow==3.20.1",
    "flask-limiter==3.5.0",
    "redis==5.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "coverage==7.10.0",
    "black==26.3.1",
    "isort==8.0.1",
    "flake8==7.3.0",
]

[tool.uv]
package = false